--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.16.1",
-    "gatsby-image": "^2.2.29",
+    "gatsby-image": "^2.2.31",
     "gatsby-plugin-manifest": "^2.2.23",
     "gatsby-plugin-offline": "^3.0.16",
     "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sass": "^2.1.22",
     "gatsby-plugin-sharp": "^2.2.31",
-    "gatsby-source-filesystem": "^2.1.33",
+    "gatsby-source-filesystem": "^2.1.36",
     "gatsby-transformer-sharp": "^2.2.23",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
