--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.16.1",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "eslint": "^6.7.2",
+    "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-plugin-flowtype": "^4.5.2",
+    "gatsby": "^2.18.11",
     "gatsby-image": "^2.2.31",
     "gatsby-plugin-manifest": "^2.2.23",
     "gatsby-plugin-offline": "^3.0.16",
@@ -13,12 +22,20 @@
     "gatsby-plugin-sass": "^2.1.22",
     "gatsby-plugin-sharp": "^2.2.31",
     "gatsby-source-filesystem": "^2.1.36",
+    "gatsby-source-graphcms": "^1.0.0-alpha.3",
+    "gatsby-transformer-json": "^2.2.19",
+    "gatsby-transformer-remark": "^2.6.37",
     "gatsby-transformer-sharp": "^2.2.23",
     "node-sass": "^4.13.0",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
+    "react-share": "^3.0.1",
+    "remark": "^11.0.2",
+    "typescript": "^3.7.3",
+    "typescript-eslint": "0.0.1-alpha.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
