--- a/package.json
+++ b/package.json
@@ -6,36 +6,37 @@
   "author": "Jake Bourne <jake.bourne@gmail.com>",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "eslint": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "eslint": "^6.8.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^5.1.0",
-    "eslint-plugin-flowtype": "^4.5.2",
-    "gatsby": "^2.18.11",
-    "gatsby-image": "^2.2.31",
-    "gatsby-plugin-manifest": "^2.2.23",
-    "gatsby-plugin-offline": "^3.0.16",
-    "gatsby-plugin-react-helmet": "^3.1.13",
-    "gatsby-plugin-sass": "^2.1.22",
-    "gatsby-plugin-sharp": "^2.2.31",
-    "gatsby-source-filesystem": "^2.1.36",
-    "gatsby-source-graphcms": "^1.0.0-alpha.3",
-    "gatsby-transformer-json": "^2.2.19",
-    "gatsby-transformer-remark": "^2.6.37",
-    "gatsby-transformer-sharp": "^2.2.23",
-    "gh-pages": "^2.1.1",
-    "node-sass": "^4.13.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "gatsby": "^2.24.66",
+    "gatsby-image": "^2.4.20",
+    "gatsby-plugin-manifest": "^2.4.32",
+    "gatsby-plugin-offline": "^3.2.29",
+    "gatsby-plugin-react-helmet": "^3.3.12",
+    "gatsby-plugin-sass": "^2.3.14",
+    "gatsby-plugin-sharp": "^2.6.37",
+    "gatsby-source-filesystem": "^2.3.31",
+    "gatsby-source-graphcms": "^1.0.0",
+    "gatsby-source-graphql": "^2.7.5",
+    "gatsby-transformer-json": "^2.4.13",
+    "gatsby-transformer-remark": "^2.8.36",
+    "gatsby-transformer-sharp": "^2.5.16",
+    "gh-pages": "^2.2.0",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-share": "^3.0.1",
     "remark": "^11.0.2",
-    "typescript": "^3.7.3",
+    "typescript": "^3.9.7",
     "typescript-eslint": "0.0.1-alpha.0"
   },
   "devDependencies": {
